--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,11 @@
     "symfony/validator": "^4.4|^5.0",
     "doctrine/annotations": "^1.11",
     "jms/serializer-bundle": "^3.7"
+  },
+  "scripts": {
+    "phpunit": "vendor/bin/phpunit",
+    "qa": [
+      "@phpunit"
+    ]
   }
 }
